doc: some html tweaking

--- a/web/index.html
+++ b/web/index.html
@@ -13,12 +13,13 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/health">Check Health</a></li>
+            <li><a href="cover.html">Cover</a></li>
         </ul>
     </div>
 </nav>
 <div class="jumbotron text-center">
-    <h1>Homepage placeholder</h1>
-    <p>This is a responsive page! You can resize the page to see affect!</p>
+    <h1>CornHub placeholder</h1>
+    <p>Trying out responsive page! Try hitting and poking it, it should respond!</p>
 </div>
 <div class="container">
     <div class="row">
