feat: add connectors add db routes

--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/health">Check Health</a></li>
             <li><a href="cover.html">Cover</a></li>
+            <li><a href="404.html">404</a></li>
         </ul>
     </div>
 </nav>
